--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "vpd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "locale",
@@ -86,52 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWe3kfRvIRQL_m1Lt1YRzhnh3QrHQctKzluD-3h7kKHIpZ5NN9c.Bn_fCK..AAA.0.0.Bo69Mn.AWeR3YF_TkqhjqXH3OfZcCQ0OZE",
+        "value": "0MmXGi5OoGPsKoWdq.AWeA4wN5HAE7ZuePwllF8WPRyFd098s-AyQXl8TEBdu-n5_47lU.Bn_fCK..AAA.0.0.Bo7iRq.AWf8_Fb77pWAlTBxxHODEcbYnKc",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "fbl_st",
-        "value": "101530141%3BT%3A29338091",
+        "value": "100715423%3BT%3A29340622",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.754Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2953%3Btimestamp%3A1760285479",
+        "value": "v2%3Bclient_version%3A2954%3Btimestamp%3A1760437354",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-12T16:11:41.525Z",
-        "lastAccessed": "2025-10-12T16:11:41.525Z"
+        "creation": "2025-10-14T10:22:50.754Z",
+        "lastAccessed": "2025-10-14T10:22:50.755Z"
     }
 ]
