--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "datr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "pas",
@@ -50,71 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575070664257",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "xs",
-        "value": "23%3AlTOvmVYI08gPqA%3A2%3A1770797174%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfbt51DI3F13kuMHVXStU1CYaBO2RmjFsX6nUYYn5pScRwiVTo.Bn_fCK..AAA.0.0.BpjDiF.AWcwqr4RZKO4HKjj4Wo61swZMwY",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101231102%3BT%3A29513286",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
         "key": "vpd",
@@ -122,16 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3081%3Btimestamp%3A1770797190",
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-11T08:06:46.688Z",
-        "lastAccessed": "2026-02-11T08:06:46.688Z"
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575070664257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "xs",
+        "value": "34%3AJBiA786e5EsNdQ%3A2%3A1771442863%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWdSwhc3F7LL0aDHzoK0cWw1zy26xS4RkTYOeZ0oX8e3LiQGFoY.Bn_fCK..AAA.0.0.BplhLS.AWe0_U4Ed4Qjb-ZOW9V34f6-W4A",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101239168%3BT%3A29524048",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3091%3Btimestamp%3A1771442898",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-18T19:28:39.972Z",
+        "lastAccessed": "2026-02-18T19:28:39.972Z"
     }
 ]
